dev/recording-consumer/httproute.yaml
# 🤖 AUTO-GENERATED - DO NOT EDIT MANUALLY
# Generated by: GitHub Actions
# Service: recording-consumer
# Environment: dev
# Image Version: debug_k8ns-86ac314
# Helm Templates: v1.3.2
# Generated: 2025-11-11 20:13:32 UTC
# Commit SHA: 86ac3146f2b49bb957265c5187c2d690adf85f7e
# Workflow: https://github.com/ritual-app/recording-consumer/actions/runs/19277336278
---
---
# Source: microservice/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: recording-consumer-microservice-swagger
  labels:
    helm.sh/chart: microservice-1.0.0
    app.kubernetes.io/name: microservice
    app.kubernetes.io/instance: recording-consumer
    app: recording-consumer
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Helm
    environment: dev
spec:
  parentRefs:
    - name: swagger-gateway
      namespace: dev
  hostnames:
    - "swagger.dev.ourritual.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /recording-consumer
      backendRefs:
        - name: recording-consumer-microservice
          port: 8080
